# jimwurst

./: .env.example  Makefile  README.md  debug_db.py  pyproject.toml  requirements.txt
.github/: ABOUT.md  copilot-instructions.md
apps/: README.md
apps/data_activation/: README.md
apps/data_activation/ollama_agent/: agent.py
apps/data_activation/ollama_agent/backend/: agent.py
apps/data_activation/ollama_agent/frontend/: app.py
apps/data_ingestion/: README.md
apps/data_ingestion/manual_job/: README.md
apps/data_ingestion/manual_job/apple_health/: README.md  ingest.py  requirements.txt
apps/data_ingestion/manual_job/bolt/: README.md  ingest.py
apps/data_ingestion/manual_job/linkedin/: README.md  ingest.py  requirements.txt
apps/data_ingestion/manual_job/public_holidays/: ingest.py
apps/data_ingestion/manual_job/spotify/: README.md  ingest.py
apps/data_ingestion/manual_job/substack/: README.md  cleanup_db.py  ingest.py  investigate_dupes.py  sample_db.py  verify_db.py
apps/data_ingestion/manual_job/telegram/: README.md  ingest.py  requirements.txt
apps/data_transformation/: README.md
apps/data_transformation/dbt/: README.md  dbt_project.yml
apps/data_transformation/dbt/macros/: generate_schema_name.sql
apps/job_orchestration/: README.md
docker/: .env.example  README.md  docker-compose.yml  init.sql
docs/: README.md  data_transformation.md
prompts/: antigravity.md  data_transformation.md
utils/: README.md  dbt_runner.py  generic_ingestor.py  ingestion_utils.py  streamlit_callback.py
(+45 files in other folders)
